[gd_scene load_steps=8 format=3 uid="uid://ctsc0l2r3pdoj"]

[ext_resource type="Script" uid="uid://cvdxne0g4eowo" path="res://Scripts/main_menu.gd" id="1_enqrr"]
[ext_resource type="Texture2D" uid="uid://dhvhoy8d7m860" path="res://Graphics/Title_Screen.png" id="2_skug0"]
[ext_resource type="Texture2D" uid="uid://c0w2n082hygwy" path="res://Graphics/Play_Button.png" id="4_bm5d4"]
[ext_resource type="Texture2D" uid="uid://dcvomjofmbql4" path="res://Graphics/Options_Button.png" id="4_fdkel"]
[ext_resource type="Texture2D" uid="uid://8j1qfbfk4gik" path="res://Graphics/High_Score_Button.png" id="6_jhm3a"]

[sub_resource type="Environment" id="Environment_op8vn"]
background_mode = 3
glow_enabled = true
glow_hdr_threshold = 1.5

[sub_resource type="CircleShape2D" id="CircleShape2D_wdkeq"]
radius = 29.0172

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_enqrr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_op8vn")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 241)
texture = ExtResource("2_skug0")
metadata/_edit_lock_ = true

[node name="OptionsButton" type="Area2D" parent="."]
position = Vector2(320, 328)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Options" type="Sprite2D" parent="OptionsButton"]
texture = ExtResource("4_fdkel")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="OptionsButton"]
polygon = PackedVector2Array(13, -15, 23, -25, 40, -32, 56, -24, 64, -32, 92, -16, 93, -31, 110, -32, 111, -21, 148, -31, 152.648, -15.2442, 141, -12, 157.24, -6.3479, 160, -1, 156, 15, 145, 26, 128, 32, 83, 12, 82, 24, 64, 25, 63, 17, 32, 32, 8, 24, -19, 26, -21, -13, -28, -12, -28, 25, -52, 28, -54, -5, -76, 12, -76, 24, -98, 28, -101, 13, -121, 28, -141, 30, -157, 17, -162, -8, -149, -25, -136, -34, -116, -35, -104, -26, -78, -31, -65, -31, -56, -26, -22, -28, -15, -26, 6, -28, 7, -14)

[node name="PlayButton" type="Area2D" parent="."]
position = Vector2(320, 240)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Play" type="Sprite2D" parent="PlayButton"]
texture = ExtResource("4_bm5d4")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayButton"]
polygon = PackedVector2Array(3, 7, 21, -31, 32, -14, 51, -32, 67, -16, 76, -30, 90, -23, 80, -4, 79, 23, 55, 27, 51, 21, 28, 29, 25, 23, 12, 24, 8, 27, -5, 26, -3, 20, -38, 30, -41, 1, -62, 16, -62, 28, -80, 30, -85, -19, -70, -27, -28, -28, -24, -1, -1, -6)

[node name="HighScoreButton" type="Area2D" parent="."]
visible = false
position = Vector2(312, 328)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="HighScores" type="Sprite2D" parent="HighScoreButton"]
position = Vector2(256, 80)
texture = ExtResource("6_jhm3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighScoreButton"]
position = Vector2(255, 80)
shape = SubResource("CircleShape2D_wdkeq")

[connection signal="input_event" from="OptionsButton" to="." method="_on_options_button_input_event"]
[connection signal="mouse_entered" from="OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="mouse_exited" from="OptionsButton" to="." method="_on_options_button_mouse_exited"]
[connection signal="input_event" from="PlayButton" to="." method="_on_play_button_input_event"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="mouse_exited" from="PlayButton" to="." method="_on_play_button_mouse_exited"]
[connection signal="input_event" from="HighScoreButton" to="." method="_on_high_score_button_input_event"]
[connection signal="mouse_entered" from="HighScoreButton" to="." method="_on_high_score_button_mouse_entered"]
[connection signal="mouse_exited" from="HighScoreButton" to="." method="_on_high_score_button_mouse_exited"]
